testsuite/tests/macros/static_values.ml.reference

#   static val x : int = 42
#     Characters 14-15:
  let y = succ x (* Error: phase mismatch *)
               ^
Error: Attempt to use value x of phase 1 in an environment of phase 0
#     Characters 13-26:
  static () = Printf.printf "%d\n" x (* Error: this module is at phase 0 *)
              ^^^^^^^^^^^^^
Error: Attempt to use value Printf.printf of phase 0 in an environment of phase 1
#     #     42
# 
42
